gramatica.txt
+ EXPRESSÕES ARITMÉTICAS

EXP ::= TERM EXP'
EXP' ::= + TERM EXP'
EXP' ::= - TERM EXP'
EXP' ::= ''
TERM ::= POW TERM'
TERM' ::= * POW TERM'
TERM' ::= / POW TERM'
TERM' ::= ''
POW ::= FACT POW'
POW' ::= ^ POW
POW' ::= ''
FACT ::= ( EXP )
FACT ::= id

+ EXPRESSÕES RELACIONAIS

EXP ::= EXP_ARITH EXP_REL
EXP_REL ::= REL_OP EXP_ARITH 
EXP_REL ::= ''
EXP_ARITH ::= TERM EXP_ARITH'
EXP_ARITH' ::= + TERM EXP_ARITH'
EXP_ARITH' ::= - TERM EXP_ARITH'
EXP_ARITH' ::= ''
TERM ::= POW TERM'
TERM' ::= * POW TERM'
TERM' ::= / POW TERM'
TERM' ::= ''
POW ::= FACT POW'
POW' ::= ^ POW
POW' ::= ''
FACT ::= ( EXP )
FACT ::= id
REL_OP ::= <
REL_OP ::= <=
REL_OP ::= >
REL_OP ::= >=
REL_OP ::= =
REL_OP ::= <>

+ EXPRESSÕES LÓGICAS

EXP ::= AND_OP OR_OP'
OR_OP' ::= || AND_OP OR_OP'
OR_OP' ::= ''
AND_OP ::= EXP_REL AND_OP'
AND_OP' ::= && EXP_REL AND_OP'
AND_OP' ::= ''
EXP_REL ::= EXP_ARITH EXP_REL'
EXP_REL' ::= REL_OP EXP_ARITH 
EXP_REL' ::= ''
EXP_ARITH ::= TERM EXP_ARITH'
EXP_ARITH' ::= + TERM EXP_ARITH'
EXP_ARITH' ::= - TERM EXP_ARITH'
EXP_ARITH' ::= ''
TERM ::= POW TERM'
TERM' ::= * POW TERM'
TERM' ::= / POW TERM'
TERM' ::= ''
POW ::= FACT POW'
POW' ::= ^ POW
POW' ::= ''
FACT ::= ( EXP )
FACT ::= id
REL_OP ::= <
REL_OP ::= <=
REL_OP ::= >
REL_OP ::= >=
REL_OP ::= =
REL_OP ::= <>

+ NOT

EXP ::= AND_OP OR_OP'
OR_OP' ::= || AND_OP OR_OP'
OR_OP' ::= ''
AND_OP ::= NOT_OP AND_OP'
AND_OP' ::= && NOT_OP AND_OP'
AND_OP' ::= ''
NOT_OP ::= NOT_OP' EXP_REL
NOT_OP' ::= not NOT_OP'
NOT_OP' ::= ''
EXP_REL ::= EXP_ARITH EXP_REL'
EXP_REL' ::= REL_OP EXP_ARITH 
EXP_REL' ::= ''
EXP_ARITH ::= TERM EXP_ARITH'
EXP_ARITH' ::= + TERM EXP_ARITH'
EXP_ARITH' ::= - TERM EXP_ARITH'
EXP_ARITH' ::= ''
TERM ::= POW TERM'
TERM' ::= * POW TERM'
TERM' ::= / POW TERM'
TERM' ::= ''
POW ::= FACT POW'
POW' ::= ^ POW
POW' ::= ''
FACT ::= ( EXP )
FACT ::= id
REL_OP ::= <
REL_OP ::= <=
REL_OP ::= >
REL_OP ::= >=
REL_OP ::= =
REL_OP ::= <>

+ VAR, ref, deref

EXP ::= AND_OP OR_OP'
OR_OP' ::= || AND_OP OR_OP'
OR_OP' ::= ''
AND_OP ::= NOT_OP AND_OP'
AND_OP' ::= && NOT_OP AND_OP'
AND_OP' ::= ''
NOT_OP ::= NOT_OP' EXP_REL
NOT_OP' ::= not NOT_OP'
NOT_OP' ::= ''
EXP_REL ::= EXP_ARITH EXP_REL'
EXP_REL' ::= REL_OP EXP_ARITH 
EXP_REL' ::= ''
EXP_ARITH ::= TERM EXP_ARITH'
EXP_ARITH' ::= + TERM EXP_ARITH'
EXP_ARITH' ::= - TERM EXP_ARITH'
EXP_ARITH' ::= ''
TERM ::= POW TERM'
TERM' ::= * POW TERM'
TERM' ::= / POW TERM'
TERM' ::= ''
POW ::= FACT POW'
POW' ::= ^ POW
POW' ::= ''
FACT ::= ( EXP )
FACT ::= REF_VAR
FACT ::= DEREF_VAR
FACT ::= VAR
REL_OP ::= <
REL_OP ::= <=
REL_OP ::= >
REL_OP ::= >=
REL_OP ::= =
REL_OP ::= <>
REF_VAR ::= ref ( VAR )
DEREF_VAR ::= deref ( DEREF_VAR' )
DEREF_VAR' ::= DEREF_VAR
DEREF_VAR' ::= VAR
VAR ::= id VAR'
VAR' ::= . id VAR'
VAR' ::= ''

+ VAR, ref, deref (correto)

EXP ::= AND_OP OR_OP'
OR_OP' ::= || AND_OP OR_OP'
OR_OP' ::= ''
AND_OP ::= NOT_OP AND_OP'
AND_OP' ::= && NOT_OP AND_OP'
AND_OP' ::= ''
NOT_OP ::= NOT_OP' EXP_REL
NOT_OP' ::= not NOT_OP'
NOT_OP' ::= ''
EXP_REL ::= EXP_ARITH EXP_REL'
EXP_REL' ::= REL_OP EXP_ARITH 
EXP_REL' ::= ''
EXP_ARITH ::= TERM EXP_ARITH'
EXP_ARITH' ::= + TERM EXP_ARITH'
EXP_ARITH' ::= - TERM EXP_ARITH'
EXP_ARITH' ::= ''
TERM ::= POW TERM'
TERM' ::= * POW TERM'
TERM' ::= / POW TERM'
TERM' ::= ''
POW ::= VAR POW'
POW' ::= ^ POW
POW' ::= ''
VAR ::= FACT VAR'
VAR' ::= . id VAR'
VAR' ::= ''
FACT ::= ( EXP )
FACT ::= id
FACT ::= REF_VAR
FACT ::= DEREF_VAR

REF_VAR ::= ref ( VAR )
DEREF_VAR ::= deref ( DEREF_VAR' )
DEREF_VAR' ::= VAR

REL_OP ::= <
REL_OP ::= <=
REL_OP ::= >
REL_OP ::= >=
REL_OP ::= =
REL_OP ::= <>

+ LITERAL, new, CALL_STMT

EXP ::= AND_OP OR_OP'
OR_OP' ::= || AND_OP OR_OP'
OR_OP' ::= ''
AND_OP ::= NOT_OP AND_OP'
AND_OP' ::= && NOT_OP AND_OP'
AND_OP' ::= ''
NOT_OP ::= NOT_OP' EXP_REL
NOT_OP' ::= not NOT_OP'
NOT_OP' ::= ''
EXP_REL ::= EXP_ARITH EXP_REL'
EXP_REL' ::= REL_OP EXP_ARITH 
EXP_REL' ::= ''
EXP_ARITH ::= TERM EXP_ARITH'
EXP_ARITH' ::= + TERM EXP_ARITH'
EXP_ARITH' ::= - TERM EXP_ARITH'
EXP_ARITH' ::= ''
TERM ::= POW TERM'
TERM' ::= * POW TERM'
TERM' ::= / POW TERM'
TERM' ::= ''
POW ::= FACT POW'
POW' ::= ^ POW
POW' ::= ''
FACT ::= ( EXP )
FACT ::= REF_VAR
FACT ::= DEREF_VAR
FACT ::= VAR
FACT ::= LITERAL
FACT ::= new VAR
FACT ::= CALL_STMT
REL_OP ::= <
REL_OP ::= <=
REL_OP ::= >
REL_OP ::= >=
REL_OP ::= =
REL_OP ::= <>
REF_VAR ::= ref ( VAR )
DEREF_VAR ::= deref ( DEREF_VAR' )
DEREF_VAR' ::= DEREF_VAR
DEREF_VAR' ::= VAR
VAR ::= id VAR'
VAR' ::= . id VAR'
VAR' ::= ''
LITERAL ::= FLOAT_LITERAL
LITERAL ::= INT_LITERAL
LITERAL ::= STRING_LITERAL
LITERAL ::= BOOL_LITERAL
LITERAL ::= null
BOOL_LITERAL ::= true 
BOOL_LITERAL ::= false

CALL_STMT ::= id (CALL_ARGS)
CALL_ARGS ::= EXP CALL_ARGS'
CALL_ARGS' :: = , EXP CALL_ARGS'
CALL_ARGS' ::= ''

STMT_LIST ::= STMT ; STMT_LIST'
STMT_LIST' ::= STMT ; STMT_LIST' 
STMT_LIST' ::= '' 

+ LITERAL, new, CALL_STMT (correto)

EXP ::= AND_OP OR_OP'
OR_OP' ::= || AND_OP OR_OP'
OR_OP' ::= ''
AND_OP ::= NOT_OP AND_OP'
AND_OP' ::= && NOT_OP AND_OP'
AND_OP' ::= ''
NOT_OP ::= NOT_OP' EXP_REL
NOT_OP' ::= not NOT_OP'
NOT_OP' ::= ''
EXP_REL ::= EXP_ARITH EXP_REL'
EXP_REL' ::= REL_OP EXP_ARITH 
EXP_REL' ::= ''
EXP_ARITH ::= TERM EXP_ARITH'
EXP_ARITH' ::= + TERM EXP_ARITH'
EXP_ARITH' ::= - TERM EXP_ARITH'
EXP_ARITH' ::= ''
TERM ::= POW TERM'
TERM' ::= * POW TERM'
TERM' ::= / POW TERM'
TERM' ::= ''
POW ::= VAR POW'
POW' ::= ^ POW
POW' ::= ''
VAR ::= FACT VAR'
VAR' ::= . id VAR'
VAR' ::= ''
FACT ::= ( EXP )
FACT ::= id CALL_STMT
FACT ::= REF_VAR
FACT ::= DEREF_VAR
FACT ::= LITERAL
FACT ::= new id

REF_VAR ::= ref ( VAR )
DEREF_VAR ::= deref ( DEREF_VAR' )
DEREF_VAR' ::= VAR

REL_OP ::= <
REL_OP ::= <=
REL_OP ::= >
REL_OP ::= >=
REL_OP ::= =
REL_OP ::= <>

LITERAL ::= FLOAT_LITERAL
LITERAL ::= INT_LITERAL
LITERAL ::= STRING_LITERAL
LITERAL ::= BOOL_LITERAL
LITERAL ::= null
BOOL_LITERAL ::= true 
BOOL_LITERAL ::= false

CALL_STMT ::= ( CALL_ARGS )
CALL_STMT ::= ''
CALL_ARGS ::= EXP CALL_ARGS'
CALL_ARGS ::= ''
CALL_ARGS' ::= , EXP CALL_ARGS'
CALL_ARGS' ::= ''

+ STMT

STMT_LIST ::= STMT STMT_LIST'
STMT_LIST ::= ''
STMT_LIST' ::= ; STMT STMT_LIST' 
STMT_LIST' ::= ''

STMT ::= id CALL_STMT

EXP ::= AND_OP OR_OP'
OR_OP' ::= || AND_OP OR_OP'
OR_OP' ::= ''
AND_OP ::= NOT_OP AND_OP'
AND_OP' ::= && NOT_OP AND_OP'
AND_OP' ::= ''
NOT_OP ::= NOT_OP' EXP_REL
NOT_OP' ::= not NOT_OP'
NOT_OP' ::= ''
EXP_REL ::= EXP_ARITH EXP_REL'
EXP_REL' ::= REL_OP EXP_ARITH 
EXP_REL' ::= ''
EXP_ARITH ::= TERM EXP_ARITH'
EXP_ARITH' ::= + TERM EXP_ARITH'
EXP_ARITH' ::= - TERM EXP_ARITH'
EXP_ARITH' ::= ''
TERM ::= POW TERM'
TERM' ::= * POW TERM'
TERM' ::= / POW TERM'
TERM' ::= ''
POW ::= VAR POW'
POW' ::= ^ POW
POW' ::= ''
VAR ::= FACT VAR'
VAR' ::= . id VAR'
VAR' ::= ''
FACT ::= ( EXP )
FACT ::= id INT_STMT
FACT ::= REF_VAR
FACT ::= DEREF_VAR
FACT ::= LITERAL
FACT ::= new id

REF_VAR ::= ref ( VAR )
DEREF_VAR ::= deref ( DEREF_VAR' )
DEREF_VAR' ::= VAR

REL_OP ::= <
REL_OP ::= <=
REL_OP ::= >
REL_OP ::= >=
REL_OP ::= =
REL_OP ::= <>

LITERAL ::= FLOAT_LITERAL
LITERAL ::= INT_LITERAL
LITERAL ::= STRING_LITERAL
LITERAL ::= BOOL_LITERAL
LITERAL ::= null
BOOL_LITERAL ::= true 
BOOL_LITERAL ::= false

INT_STMT ::= CALL_STMT
INT_STMT ::= ''

CALL_STMT ::= ( CALL_ARGS )
CALL_ARGS ::= EXP CALL_ARGS'
CALL_ARGS ::= ''
CALL_ARGS' ::= , EXP CALL_ARGS'
CALL_ARGS' ::= ''
